Page Fragments: updated arquillian.xml and pom.xml accordig to it